t+zh:[[大臣]] t+ru:[[министр]] t+ru:[[секретарь]] t-balance ([[WT:EDIT|Assisted]]) <secretary#7097906>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -70,12 +70,14 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * French: {{t+|fr|secrétaire}}
 * Hungarian: {{t+|hu|miniszter}}, {{t-|hu|államtitkár}}
 * [[Interlingua]]: [[secretaria]] {{f}}
-* Japanese: {{t|ja|大臣|tr=だいじん, daijin|sc=Jpan}}, {{t|ja|長官|tr=ちょうかん, chōkan|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|大臣|tr=だいじん, daijin|sc=Jpan}}, {{t|ja|長官|tr=ちょうかん, chōkan|sc=Jpan}}
 * Kurdish:
 *: Kurmanji: [[sekreter]]
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
+* Mandarin: {{t|zh|大臣|tr=dàchén|sc=Hani}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
+* Russian: {{t|ru|министр|m|tr=minístr|sc=Cyrl}},  {{t|ru|секретарь|m|tr=sekretár’|sc=Cyrl}}
 * Spanish: {{t-|es|secretario|m}}
 * Swahili: {{t|sw|karani|xs=Swahili}}
 * [[Telugu]]: [[కార్యదర్శి]] (kaaryadarSi)
