--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -39,6 +39,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * Danish: {{t+|da|f.eks.}}, {{t+|da|fx}} {{i|[[for eksempel]]}}
 * Dutch: {{t-|nl|bv.}}, {{t-|nl|bijv.}}, {{t|nl|bvb.}} {{i|{{t+|nl|bijvoorbeeld}}}}
 * Esperanto: [[ekz.]] {{i|[[ekzemple]]}}
+* Estonian: {{t|et|nt}}
 * Faroese: [[t.d.]] {{i|[[til dømis]]}}
 * Finnish: [[esim.]] {{i|[[esimerkiksi]]}}
 * French: [[par ex.]], [[p. ex.]] {{i|[[par exemple]]}}<!-- are both right? -->
