t+la:[[Francia]] ([[WT:EDIT|Assisted]]) <France#7105308>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -83,7 +83,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Korean: [[프랑스]] (Peurangseu)
 {{trans-mid}}
 * Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}
-* Latin: {{t+|la|Gallia|f}}
+* Latin: {{t+|la|Gallia|f}},  {{t|la|Francia}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
 * [[Limburgish]]: [[Frankriek]]
 * Lithuanian: {{t+|lt|Prancūzija|xs=Lithuanian}}
