t+vi:[[Cộng hòa Séc]] ([[WT:EDIT|Assisted]]) <Czech Republic#7105569>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -57,6 +57,7 @@
 * Swedish: [[Tjeckien]], [[Republiken Tjeckien]]
 * Turkish: {{t+|tr|Çek Cumhuriyeti}}
 * Ukrainian: [[Чеська Республіка]]
+* Vietnamese: {{t|vi|Cộng hòa Séc}}
 * [[Võro]]: [[Tsehhi]], [[Tsehhi Vabariik']]
 * Welsh: [[Y Weriniaeth Tsiec]]
 * Yiddish: (Tshekhishe Republik)
