--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -14,8 +14,8 @@ Old English ''[[sūcan]]''
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
 # To draw into, by any means, with an attractive force, usually without direct contact. Used to describe the effect of  negative pressure allowing atmospheric pressure to push air in, as occurs with breathing, drinking and vacuum cleaning.
 # {{colloquial}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency.
-#: ''You're great at baseball, but you '''suck''' at golf.''
-#: ''This situation '''sucks'''.''
+#* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, pg. 251:
+#*: . . . and it has a few very high points . . . but as a novel, '''it sucks'''.
 # To perform [[fellatio]]; with ''off'' means to perform fellatio culminating in ejaculation.
 
 ====Synonyms====
@@ -98,6 +98,7 @@ Old English ''[[sūcan]]''
 {{en-noun}}
 
 # {{Canadian}} A [[weak]], [[self-pitying]] person; a person who won't [[go along]], especially out of [[spite]]; a [[crybaby]] or [[sore loser]].
+* '''1916''': "You are McGlade's '''suck'''." - [[w:James Joyce|James Joyce]], ''[[w:Portrait of the Artist as a Young Man|Portrait of the Artist as a Young Man]] (Macmillan Press Ltd, paperback, 23)
 #* '''1999''', Hiromi Goto, “Drift”, in ''Ms.'', v 9, n 3, p 82–6:
 #*: “Why're you bothering to take her anywhere? I can't stand traveling with her. You're such a '''suck''',” her sister said.  Waved her smoke.  “No fucking way I'm going.”
 #* '''2008''', Beth Hitchcock, “Parenting Pair”, in ''Today's Parent'', v 25, n 5, p 64:
@@ -110,11 +111,6 @@ Old English ''[[sūcan]]''
 
 ====Translations====
 {{trans-see|sycophant}}
-
-===Quotations===
-* '''1916''': "You are McGlade's '''suck'''." - [[w:James Joyce|James Joyce]], ''[[w:Portrait of the Artist as a Young Man|Portrait of the Artist as a Young Man]] (Macmillan Press Ltd, paperback, 23)
-
-* '''1970''': "...(The Rum Diary) has a few very high points...but as a novel, '''it sucks'''." - [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America (Simon and Schuster, hardcover, pg. 251)''
 
 ----
 
