--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -46,6 +46,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Spanish: {{t-|es|cortina|f}}
 * Swahili: {{t|sw|pazia|xs=Swahili}}
 * Turkish: {{t+|tr|perde}}
+* Welsh: {{t|cy|llen|f}},  {{t|cy|llenni|f|p}}
 {{trans-bottom}}
 
 {{trans-top|piece of cloth in a theater}}
