--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -20,11 +20,13 @@ In the English language, it is one of only a few distinct words where the gender
 
 ====Translations====
 {{trans-top|a person}}
+* Bulgarian: {{t|bg|блондинка|f|sc=Cyrl}}
 * Esperanto: {{t-|eo|blondulo|xs=Esperanto}}; {{t-|eo|blondulino|xs=Esperanto}} (female)
 {{trans-mid}}
 * French: {{t+|fr|blonde|f}}
 {{trans-bottom}}
 {{trans-top|a hair color}}
+* Bulgarian: {{t|bg|руса коса|sc=Cyrl}}
 {{trans-mid}}
 {{trans-bottom}}
 {{trans-top|a light yellowish color}}
@@ -42,12 +44,14 @@ In the English language, it is one of only a few distinct words where the gender
 ====Translations====
 {{trans-top|of a blonde complexion}}
 * Arabic: {{t|ar|شقراء|f|alt=شَقْراء|tr=shaqra'|sc=Arab}}
+* Bulgarian: {{t|bg|рус|sc=Cyrl}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 {{trans-mid}}
 * French: {{t+|fr|blonde}}
 {{trans-bottom}}
 {{trans-top|having a blonde or gold appearance}}
 {{trans-mid}}
+* Bulgarian: {{t|bg|златист|sc=Cyrl}}
 {{trans-bottom}}
 {{trans-top|of a light brown color}}
 * Arabic: {{t|ar|شقراء|f|alt=شَقْراء|tr=shaqra'|sc=Arab}}
