--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -96,6 +96,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Arabic: {{Arab|[[قلم]]}} (qálam) {{m}}, {{Arab|[[قلم حبر]]}} (qálam ħebr) {{m}}
 *: Morocco: {{tø|ary|ستيلو|tr=stīlū|sc=Arab}}
 * Armenian: [[գրիչ]] (grič)
+* [[Bengali]]: {{t|bn|কলম |sc=Beng}},  {{t|bn|লিখনী |sc=Beng}}
 * Chinese: [[鋼筆]], [[钢笔]] (gāngbǐ), [[筆]], [[笔]] (bǐ), [[圓珠筆]], [[圆珠笔]] (yuánzhūbǐ)
 * Croatian: {{t-|hr|pero|n}}, {{t-|hr|kemijska olovka|f}}
 * Dutch: {{t+|nl|pen|f}}
@@ -145,6 +146,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|to write}}
+* [[Bengali]]: {{t|bn|লেখা |sc=Beng}},  {{t|bn|লিখন |sc=Beng}}
 * Dutch: [[opschrijven]], [[schrijven]], (colloquial: [[oppennen]], [[neerpennen]])
 * Finnish: [[kynäillä]]
 * French: {{t+|fr|écrire}}
