--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -199,6 +199,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Hebrew: {{t+|he|חמאה|f|alt=חֶמְאָה|tr=khem'a|sc=Hebr}}
 * Hindi: [[मक्खन]] (makkhan) {{m}}, [[नवनीत]] (navnīt) {{m}}, [[नोनी]] (nonī) {{f}}
 * Hungarian: {{t+|hu|vaj}}
+* Icelandic: {{t|is|smjör|n}},  {{t|is|smjer|n}}
 * [[Ido]]: [[butro]]
 * [[Interlingua]]: [[butyro]]
 * Irish: {{t+|ga|im|m|xs=Irish}}
