--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -34,6 +34,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 {{trans-mid}}
 * Japanese: [[パジャマ]] (pajama)
 * Korean: {{t-|ko|잠옷|tr=jam-ot|sc=Hang}}
+* Maltese: {{t|mt|paġama|f}}
 * Portuguese: {{t-|pt|pijama|m|s}}
 * Russian: {{t+|ru|пижама|f|s|sc=Cyrl}}
 * Serbian:
