t+ga:[[álainn]] t+cy:[[hardd]] t+cy:[[prydferth]] t-balance ([[WT:EDIT|Assisted]]) <beautiful#7132308>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -78,9 +78,10 @@
 * Hindi: {{t-|hi|ख़ूबसूरत|tr=xūbsūrat|sc=Deva|xs=Hindi}}, {{t-|hi|सुन्दर|tr=sundar|sc=Deva|xs=Hindi}}
 * Hungarian: {{t+|hu|szép}},  {{t+|hu|gyönyörű}}
 * Icelandic: {{t+|is|fallegur}}, {{t+|is|fagur}}
-{{trans-mid}}
 * [[Ido]]: {{t+|io|bela|xs=Ido}}
+{{trans-mid}}
 * Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
+* Irish: {{t|ga|álainn}}
 * Italian: {{t+|it|bello}}
 * Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt)
@@ -108,6 +109,7 @@
 * Turkish: {{t+|tr|güzel}}
 * Urdu: {{t-|ur|خوبصورت|tr=xūbsūrat|sc=ur-Arab|xs=Urdu}}, {{t-|ur|سندر|tr=sundar|sc=ur-Arab|xs=Urdu}}
 * Vietnamese: [[đẹp]], [[đẹp đẽ]]
+* Welsh: {{t|cy|hardd}},  {{t|cy|prydferth}}
 * [[West Frisian]]: [[moai]], [[kreas]]
 {{trans-bottom}}
 
