--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -37,6 +37,7 @@ From {{etyl|fro}} ''[[branche]]''.
 * Armenian: {{t-|hy|ճյուղ|tr=č̣yuġ|sc=Armn|xs=Armenian}}, {{t-|hy|ոստ|tr=ost|sc=Armn|xs=Armenian}}
 *: Old Armenian: {{tø|xcl|ճիւղ|tr=čiwł|sc=Armn|xs=Old Armenian}}, {{tø|xcl|ոստ|tr=ost|sc=Armn|xs=Old Armenian}}, {{tø|xcl|կողր|tr=kołr|sc=Armn|xs=Old Armenian}}
 * Bosnian: {{t-|bs|grana|f}}
+* Bulgarian: {{t|bg|клон|m|sc=Cyrl}}
 * Croatian: {{t-|hr|grana|f}}
 * Czech: {{t-|cs|větev|f}}
 * Dutch: {{t+|nl|tak}}
@@ -68,6 +69,7 @@ From {{etyl|fro}} ''[[branche]]''.
 {{trans-top|something that divides like the branch of a tree}}
 * Armenian: {{t-|hy|ճյուղ|tr=č̣yuġ|sc=Armn|xs=Armenian}}
 * Bosnian: {{t-|bs|grana|f}}
+* Bulgarian: {{t|bg|разклонение|m|sc=Cyrl}}
 * Croatian: {{t-|hr|grana|f}}
 * Dutch: {{t+|nl|tak}}
 * Finnish: {{t-|fi|haara}}
@@ -85,6 +87,7 @@ From {{etyl|fro}} ''[[branche]]''.
 
 {{trans-top|office of an organization with several locations}}
 * Armenian: {{t-|hy|մասնաճյուղ|tr=masnač̣yuġ|sc=Armn|xs=Armenian}}
+* Bulgarian: {{t|bg|клон|m|sc=Cyrl}},  {{t|bg|филиал|m|sc=Cyrl}}
 * Dutch: {{t+|nl|filiaal}}
 * Finnish: [[sivukonttori]]
 * German: {{t+|de|Zweigstelle|f}}, {{t+|de|Filiale|f}}
@@ -110,6 +113,7 @@ From {{etyl|fro}} ''[[branche]]''.
 
 {{trans-top|an area in business or of knowledge, research}}
 * Armenian: {{t-|hy|ճյուղ|tr=č̣yuġ|sc=Armn|xs=Armenian}}
+* Bulgarian: {{t|bg|област|f|sc=Cyrl}}
 * Dutch: {{t+|nl|branch}} (of business), {{t|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
 * Finnish: {{t+|fi|ala}}
 * German: {{t+|de|Branche|f}} (of business)
