--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -103,6 +103,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 
 {{trans-top|a building material}}
 * [[Afrikaans]]: {{t-|af|baksteen|xs=Afrikaans}}
+* Bulgarian: {{t|bg|тухли|p|sc=Cyrl}}
 * Chinese traditional/simplified: [[磚塊]], [[砖块]] (zhuān kuài), [[磚頭]], [[砖头]] (zhuān tóu)
 * Danish: [[mursten]] {{c}}
 * Dutch: {{t+|nl|baksteen}}, {{t-|nl|bakstenen}}
