t+sq:[[gjalpë]] t+la:[[butyrum]] ([[WT:EDIT|Assisted]]) <butter#7140563>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -177,6 +177,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 ====Translations====
 {{trans-top|soft foodstuff made from milk}}
 * [[Afrikaans]]: {{t|af|botter}}
+* Albanian: {{t|sq|gjalpë}}
 * [[American Sign Language]]: {{tø|ase|H@TipPalm-PalmDown-OpenB@CenterChesthigh-PalmUp Contact H@BasePalm H@TipPalm Contact H@BasePalm H@TipPalm Contact H@BasePalm|xs=American Sign Language}}
 * Arabic: {{Arab|[[زبدة]]}} (zúbda) {{f}}
 * Armenian: {{t-|hy|կարագ|tr=karag|sc=Armn|xs=Armenian}}
@@ -210,6 +211,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Korean: [[버터]] (beoteo)
 * Kurdish: {{t+|ku|که‌ره‌|sc=ku-Arab}}
 * Lao: {{Laoo|[[ເບີ]]}} (bəə)
+* Latin: {{t|la|butyrum}}
 * Latvian: {{t-|lv|sviests|m|xs=Latvian}}
 * Lithuanian: [[sviestas]] {{m}}
 * [[Macedonian]]: {{t|mk|путер|m|tr=púter|sc=Cyrl|xs=Macedonian}}
