--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -59,14 +59,17 @@ From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, 
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 * [[Macedonian]]: {{t|mk|руса|f|tr=rúsa|sc=Cyrl|xs=Macedonian}},  {{t-|mk|плава|f|tr=pláva|sc=Cyrl|xs=Macedonian}}
 {{trans-mid}}
+* Russian: {{t|ru|светлый|tr=svétlyj|sc=Cyrl}}
 * Swedish: {{t-|sv|blond}}
 {{trans-bottom}}
 
 {{trans-top|person's complexion}}
+* Arabic: {{t|ar|أشقر|m|tr='áshqar|sc=Arab}},  {{t|ar|شقراء|f|tr=shaqraa'|sc=Arab}},  {{t|ar|شقر|p|tr=shuqr|sc=Arab}}
 * Bulgarian: {{t|bg|рус|sc=Cyrl}},  {{t|bg|светъл|sc=Cyrl}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
-* [[Macedonian]]: {{t|mk|светол|m|tr=svétol|sc=Cyrl|xs=Macedonian}},  {{t|mk|белолик|m|tr=bélolik|sc=Cyrl|xs=Macedonian}},  {{t|mk|светла|f|tr=svétla|sc=Cyrl|xs=Macedonian}},  {{t|mk|белолика|f|tr=belólika|sc=Cyrl|xs=Macedonian}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|светол|m|tr=svétol|sc=Cyrl|xs=Macedonian}},  {{t|mk|белолик|m|tr=bélolik|sc=Cyrl|xs=Macedonian}},  {{t|mk|светла|f|tr=svétla|sc=Cyrl|xs=Macedonian}},  {{t|mk|белолика|f|tr=belólika|sc=Cyrl|xs=Macedonian}}
+* Russian: {{t|ru|белый|tr=bélyj|sc=Cyrl}}
 * Swedish: [[ljus]], [[ljushyad]], blond
 {{trans-bottom}}
 
