/* Translations */ + hr <butter#7151776>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -187,6 +187,7 @@ From {{etyl|ang}} {{term|butere|lang=ang}}, from from West Germanic, from Latin 
 * Bulgarian: {{t-|bg|масло|n|tr=máslo|sc=Cyrl}}
 * [[Catalan]]: [[mantega]] {{f}}
 * Chinese: [[黃油]], [[黄油]]  (huángyóu), [[牛油]] (niúyóu)
+* Croatian: {{t+|hr|maslac|m}}
 * Czech: {{t+|cs|máslo|n}}
 * Danish: {{t-|da|smør}}
 * Dutch: {{t+|nl|boter|f}}
