t+it:[[scorrimento]] t+it:[[spostamento]] t+it:[[deriva]] ([[WT:EDIT|Assisted]]) <creep#7156826>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -41,6 +41,7 @@
 {{trans-top|slight displacement}}
 * Finnish: [[liikahdus]]
 {{trans-mid}}
+* Italian: {{t|it|scorrimento}},  {{t|it|spostamento}},  {{t|it|deriva}}
 * Russian: {{t|ru|сползание|g=n|tr=spolzánije|sc=Cyrl}}
 {{trans-bottom}}
 
