no definition line for Middle Chinese/Han character added {defn}, no definition line for Vietnamese/Han character added {defn} <昌#7158306>

--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -51,14 +51,20 @@
 ----
 
 ==Middle Chinese==
+
 ===Han character===
 '''昌''' ([[chiɑng]])<!--note: the vowel ɑ is an IPA symbol and is different from the vowel a-->
+
+# {{defn|Middle Chinese}}
 
 ----
 
 ==Vietnamese==
+
 ===Han character===
 '''昌''' ([[xương]])
+
+# {{defn|Vietnamese}}
 
 [[fr:昌]]
 [[ko:昌]]
