--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -142,6 +142,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Bosnian: {{t-|bs|šljiva|f}}
 * Bulgarian: {{t+|bg|слива|tr=sliva|sc=Cyrl}}
 * [[Catalan]]: [[pruna]] {{f}}
+* Chinese:
+** Mandarin: {{t|zh|李子|tr=lǐzi|sc=Hani}}
 * Croatian: {{t-|hr|šljiva|f}}
 * Czech: {{t+|cs|švestka|f}}, {{t-|cs|slíva|f}}
 * Danish: [[blomme]]
