--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -206,8 +206,8 @@ From {{etyl|ang}} {{term|butere|lang=ang}}, from from West Germanic, from Latin 
 * [[Interlingua]]: [[butyro]]
 * Irish: {{t+|ga|im|m|xs=Irish}}
 * Italian: {{t+|it|burro|m}}
-{{trans-mid}}
 * Japanese: {{t+|ja|バター|tr=batā|sc=Jpan}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku|sc=Jpan}}
+{{trans-mid}}
 * [[Kinyarwanda]]: [[amavuta]]
 * Korean: [[버터]] (beoteo)
 * Kurdish: {{t+|ku|که‌ره‌|sc=ku-Arab}}
@@ -219,6 +219,7 @@ From {{etyl|ang}} {{term|butere|lang=ang}}, from from West Germanic, from Latin 
 * [[Manx]]: {{t|gv|eeym|f|xs=Manx}}
 * [[Marathi]]: {{t-|mr|माखणे|tr=mākhaṇe|sc=Deva|xs=Marathi}}
 * Mongolian: {{Cyrl|[[цөцгийн тос]]}} (tsötsgiin tos)
+* [[Old Church Slavonic]]: {{tø|cu|масло|n|tr=maslo|sc=Cyrs}}
 * Old English: {{t-|ang|butere|f|xs=Old English}}
 * [[Old Irish]]: {{tø|sga|imb|n}}
 * Persian: {{t+|fa|کره|tr=kare|sc=fa-Arab|xs=Persian}}
