--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -268,6 +268,7 @@ From {{etyl|ang}} {{term|butere|lang=ang}}, from from West Germanic, from Latin 
 
 ====Translations====
 {{trans-top|to spread butter on}}
+* Bulgarian: {{t|bg|намазвам с масло|sc=Cyrl}}
 * Czech: [[mazat]] [[máslo|máslem]] (''[[impf.]]''); [[namazat]] [[máslo|máslem]]; [[pomazat]] [[máslo|máslem]] (''[[pf.]]'')
 * Danish: [[smøre]] brødet
 * Dutch: [[beboteren]], [[inboteren]], met boter [[besmeren]]
