--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -25,6 +25,7 @@
 #: ''You're going to have to pull harder to get that cork out of the bottle.''
 # {{intransitive|slang}} To succeed in finding a person with whom to have sex or to make out with somebody which is not in a relationship with you, eg "I pulled tonight!" - meaning the person made out.
 # {{transitive|online gaming}} Initiate combat with an enemy character in an [[online game]].
+# {{Ultimate Frisbee}} To toss a disc with the intent of launching the disc across the length of a field.
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} [[drag]], [[tow]], [[tug]], [[yank]]
