t+hu:[[pizsama]] t+de:[[Schlafanzug]] t+de:[[Pyjama]] ([[WT:EDIT|Assisted]]) <pajamas#7172269>

--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -29,6 +29,8 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 * Estonian: {{t-|et|pidžaama}}
 * Finnish: {{t+|fi|pyjama}}, {{t-|fi|yöpuku|s}}
 * French: {{t+|fr|pyjama|m|s}}
+* German: {{t|de|Schlafanzug|m}},  {{t|de|Pyjama|m}}
+* Hungarian: {{t|hu|pizsama}}
 * Indonesian: {{t-|id|piyama|xs=Indonesian}}
 * [[Interlingua]]: [[pajama]]
 {{trans-mid}}
