--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -171,6 +171,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Danish: {{t-|da|bro|c}}
 * Finnish: {{t+|fi|silta}}, {{t|fi|hammassilta}}
 * French: {{t+|fr|bridge|m}}
+* German: {{t|de|Brücke|f}}
 * Hungarian: {{t+|hu|hid|alt=híd}}
 * Italian: {{t+|it|ponte|m}}
 {{trans-mid}}
@@ -190,6 +191,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Bulgarian: {{t|bg|мостик|m|sc=Cyrl}}
 * Finnish: {{t|fi|komentosilta}}
 * French: {{t+|fr|passerelle|f}}
+* German: {{t|de|Brücke|f}}
 * Hungarian: {{t+|hu|hid|alt=híd}}
 * Polish: {{t|pl|mostek kapitański|m}}
 * Russian: {{t|ru|капитанский мостик|m|tr=kapitánskij móstik|sc=Cyrl}}
