--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -70,6 +70,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Hebrew: {{he-translation|עקימה|'aqima}} {{f}}
 * Italian: {{t+|it|curva|f}}
 * Russian: [[изгиб]] {{m}}, [[кривая]] {{f}}, [[поворот]] {{m}}
+* Spanish: {{t|es|curva|f}}
 * Swedish: {{t+|sv|kurva|c}}
 * [[Telugu]]: [[వంపు]] (vampu)
 * Turkish: {{t|tr|kıvrım}}
@@ -84,11 +85,13 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Finnish: {{t+|fi|kaari}}, {{t-|fi|käyrä}}
 * French: {{t+|fr|courbe|f}}
 {{trans-mid}}
+* German: {{t|de|Linie|f}}
 * Hungarian: {{t+|hu|görbe}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: [[曲線]] ([[きょくせん]], kyokusen)
 * Russian: {{t|ru|кривая|f|tr=krivája|sc=Cyrl}}
 * Slovene: [[krivulja]] {{f}}
+* Spanish: {{t|es|curva|f}}
 * Swedish: {{t+|sv|kurva|c}}
 * Turkish: {{t|tr|eğri}}
 {{trans-bottom}}
@@ -99,6 +102,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Finnish: {{t|fi|kurvit|p}}
 * Hebrew: [[חיטובים]] (khit'uvym) {{m|p}}
 {{trans-mid}}
+* Spanish: {{t|es|curvas|f|p}}
 * Turkish: {{t|tr|kıvrım}}
 {{trans-bottom}}
 
@@ -111,6 +115,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-mid}}
 * Italian: [[curva]] {{f}} (''usually plural'')
 * Russian: [[изгибы]] {{p}}
+* Spanish: {{t|es|curvas|f}}
 * Swedish: [[kurva]] {{c}} (''usually plural''), [[figur]] {{c}} (''usually singular'')
 * [[Telugu]]: [[వంపులు]] (vampulu), [[వొంపులు]] (vompulu)
 {{trans-bottom}}
