t+de:[[Gardine]] ([[WT:EDIT|Assisted]]) <curtain#7175110>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -33,7 +33,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Czech: {{t-|cs|závěs|m}}
 * Finnish: {{t-|fi|verho}}
 * French: {{t+|fr|rideau|m}}
-* German: {{t+|de|Vorhang|m}}
+* German: {{t+|de|Vorhang|m}},  {{t|de|Gardine|f}}
 {{trans-mid}}
 * Hebrew: [[וילון]] (vilon) {{m}}
 * Italian: {{t+|it|tenda|f}}
