--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -14,6 +14,7 @@
 {{trans-top|country in Central Europe}}
 * Arabic: {{Arab|[[جمهورية التشيك]]}}
 * Armenian: [[Չեխիայի Հանրապետություն]] (Čexiayi Hanrapetut'yun)
+* [[Azeri]]: {{t|az|Çex Respublikası}}
 * Bosnian: {{t-|bs|Češka Republika|f}}
 * [[Breton]]: [[Republik Tchek]]
 * [[Catalan]]: [[República Txeca]] {{f}}
