iwiki +[[:lt:find]] <find#7238672>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -184,6 +184,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 [[kk:find]]
 [[ku:find]]
 [[lo:find]]
+[[lt:find]]
 [[hu:find]]
 [[nl:find]]
 [[ja:find]]
@@ -198,7 +199,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 [[ta:find]]
 [[te:find]]
 [[th:find]]
-[[vi:find]]
 [[tr:find]]
 [[uk:find]]
+[[vi:find]]
 [[zh:find]]
