iwiki +[[:ml:pen]] <pen#7246746>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -294,6 +294,7 @@ English transcriptions of Chinese speech often fail to distinguish between the c
 [[lo:pen]]
 [[lt:pen]]
 [[hu:pen]]
+[[ml:pen]]
 [[nl:pen]]
 [[ja:pen]]
 [[no:pen]]
