--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -208,6 +208,7 @@ From {{etyl|fro}} ''[[branche]]''.
 [[sw:branch]]
 [[lt:branch]]
 [[hu:branch]]
+[[ml:branch]]
 [[nl:branch]]
 [[pl:branch]]
 [[pt:branch]]
