iwiki +[[:ml:thunder]] <thunder#7253611>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -207,6 +207,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 [[kk:thunder]]
 [[lo:thunder]]
 [[hu:thunder]]
+[[ml:thunder]]
 [[nl:thunder]]
 [[ja:thunder]]
 [[oc:thunder]]
