t+fr:[[couper]] ([[WT:EDIT|Assisted]]) <cut#7255492>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -379,6 +379,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{trans-bottom}}
 
 {{trans-top|to divide a pack of playing cards}}
+* French: {{t|fr|couper}}
 * German: {{t+|de|schneiden}}
 * Italian: {{t+|it|alzare}}
 {{trans-mid}}
