t+gl:[[chupar]] ([[WT:EDIT|Assisted]]) <suck#7256530>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -43,6 +43,7 @@ Old English ''[[sūcan]]''
 * [[Ewe]]: [[nyi]]
 * Finnish: {{t+|fi|imeä}}
 * French: {{t+|fr|sucer}}
+* [[Galician]]: {{t|gl|chupar}}
 * German: {{t+|de|saugen}}
 * Hindi: {{t-|hi|चूसना|tr=cūsnā|sc=Deva|xs=Hindi}}
 * Italian: [[succhiare]], [[suggere]]
