t+gl:[[vomitar]] ([[WT:EDIT|Assisted]]) <vomit#7257205>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -27,6 +27,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 * Estonian: {{t-|et|oksendama}}
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}
+* [[Galician]]: {{t|gl|vomitar}}
 * German: [[sich]] [[übergeben]], [[erbrechen]]
 * Greek: [[εμώ]], [[κάνω εμετό]], [[ξερνώ]] {{qualifier|colloquial}}
 * Hebrew: {{t|he|להקיא|sc=Hebr}}
