--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -51,7 +51,7 @@ Old English ''[[sūcan]]''
 * Korean: [[빨다]] (ppalda)
 * Kurdish: [[mêjîn]], [[mêtin]], {{ku-Arab|[[مژین]]}}
 {{trans-mid}}
-* Latin: {{t|la|sugo}}, {{t|la|sugere}}; {{t-|la|fellare}}
+* Latin: {{t|la|sugo}}, {{t|la|sugere}}, {{t-|la|fellare}}
 * Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|цица|tr=cíca|sc=Cyrl|xs=Macedonian}}
 * Norwegian: {{t-|no|suge}}
