--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -82,7 +82,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Persian: {{t|fa|آوریدن |sc=fa-Arab|xs=Persian}},  {{t|fa|آفندیدن|sc=fa-Arab|xs=Persian}},  {{t|fa|پیکار|sc=fa-Arab|xs=Persian}},  {{t|fa|جنك|sc=fa-Arab|xs=Persian}}
 * Polish: {{t+|pl|walczyć}}
 * Portuguese: {{t+|pt|lutar}}
-* Romanian: {{t|ro|lupta}}
+* Romanian: {{t|ro|lupta}}, {{t|ro|se bate}}
 * Russian: {{t|ru|драться|tr=drát'sja|sc=Cyrl}} {{impf}}, {{t|ru|биться|tr=bít'sja|sc=Cyrl}} {{impf}}, {{t+|ru|бороться|tr=borót’sja|sc=Cyrl}} ''wrestle'', {{t|ru|сражаться|tr=sražát'sja|sc=Cyrl}} {{impf}} ''in a duel or bttle''
 * {{trreq|Sanskrit}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
