--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -142,6 +142,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Korean: [[싸우다]] (ssauda)
 * Portuguese: [[lutar]] com/contra, [[combater]]
 * Romanian: {{t|ro|combate}}
+* [[Romansch]]: {{t|rm|cumbatter}}
 * Russian: {{t|ru|биться|tr=bít's'a|sc=Cyrl}} {{impf}}, {{t|ru|сражаться|tr=sražát's'a|sc=Cyrl}} {{impf}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
 * Swahili: {{t+|sw|vita|xs=Swahili}}
