--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -147,6 +147,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * [[Romansch]]: {{t|rm|cumbatter}}
 * Russian: {{t|ru|биться|tr=bít's'a|sc=Cyrl}} {{impf}}, {{t|ru|сражаться|tr=sražát's'a|sc=Cyrl}} {{impf}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
+* Spanish: {{t|es|combatir}}
 * Swahili: {{t+|sw|vita|xs=Swahili}}
 {{trans-bottom}}
 
