t+ca:[[tallar]] ([[WT:EDIT|Assisted]]) <cut#7259678>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -260,6 +260,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * [[Amharic]]: {{tø|am|መቁረጥ|tr=mäquräṭ|sc=Ethi}}
 * Arabic: {{t+|ar|جرح|tr=jaraHa|sc=Arab|alt=جَرَحَ}}
 * Armenian: {{t-|hy|կտրել|tr=ktrel|sc=Armn|xs=Armenian}}
+* [[Catalan]]: {{t|ca|tallar}}
 * Chinese: {{t-|cmn|切|tr=qiē|sc=Hani|xs=Mandarin}}
 * Danish: [[skære]], [[snitte]]
 * Esperanto: {{t-|eo|tranĉi|xs=Esperanto}}
