t+ro:[[tăia]] ([[WT:EDIT|Assisted]]) <cut#7259759>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -273,6 +273,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Japanese: {{t+|ja|切る|sc=Jpan}} ({{t+|ja|きる|sc=Jpan}}, kiru)
 * Polish: {{t+|pl|ciąć}}
 * Portuguese: {{t+|pt|cortar}}
+* Romanian: {{t|ro|tăia}}
 * Russian: {{t|ru|резать|tr=rézat’|sc=Cyrl}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|skära}}
