--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -271,6 +271,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Hebrew: [[לחתוך]] (lakhtokh) (''transitive - to cut something intentionally''); [[להיחתך]] (lehikhatekh) (''intransitive - to be cut unintentionally'')
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る|sc=Jpan}} ({{t+|ja|きる|sc=Jpan}}, kiru)
+* Latin: {{t|la|seco}}
 * Polish: {{t+|pl|ciąć}}
 * Portuguese: {{t+|pt|cortar}}
 * Romanian: {{t|ro|tăia}}
