--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -292,6 +292,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Esperanto: {{t-|eo|tranĉi|xs=Esperanto}}
 * Finnish: {{t+|fi|leikata}}
 * French: {{t+|fr|couper}}
+* [[Galician]]: {{t|gl|cortar}}
 * German: {{t+|de|schneiden}}
 {{trans-mid}}
 * Hebrew: [[לחתוך]] (lakhtokh)
