--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -301,6 +301,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Japanese: {{t+|ja|切る|sc=Jpan}} ({{t+|ja|きる|sc=Jpan}}, kiru)
 * Latin: {{t|la|seco}}, {{t|la|secare}}
 * Portuguese: {{t+|pt|cortar}}
+* Romanian: {{t|ro|tăia}}
 * [[Romansch]]: {{t|rm|tagliar}}
 * Russian: {{t|ru|разрезать|tr=razrézat’|sc=Cyrl}} {{pf}}, {{t|ru|разрезать|tr=razrezát’|sc=Cyrl}} {{impf}}
 * Spanish: {{t+|es|cortar}}
