--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -114,6 +114,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 [[lo:cost]]
 [[lt:cost]]
 [[hu:cost]]
+[[ml:cost]]
 [[nl:cost]]
 [[ja:cost]]
 [[oc:cost]]
