t+ca:[[apunyalar]] ([[WT:EDIT|Assisted]]) <stab#7264233>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -76,6 +76,7 @@
 * Arabic: {{Arab|[[طعن]]}} (ṭáʕana)
 * Armenian: {{t-|hy|խոցել|tr=xoc'el|sc=Armn|xs=Armenian}}
 * Bosnian: {{t-|bs|bosti}}
+* [[Catalan]]: {{t|ca|apunyalar}}
 * Chinese: [[朿]] (cì)
 * Croatian: {{t-|hr|bosti}}
 * Dutch: {{t+|nl|steken}}
