--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -88,7 +88,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|pugnalare}}
 * {{trreq|Japanese}}
-* Latin: {{t|la|traicio}}
+* Latin: {{t|la|traicio}},  {{t|la|traicere}}
 * Lithuanian: {{t-|lt|badyti|xs=Lithuanian}}
 * Norwegian: {{t|no|stikke}}
 * Portuguese: {{t-|pt|esfaquear}},  {{t|pt|apunhalar}}
