t+rm:[[piztgar]] ([[WT:EDIT|Assisted]]) <stab#7264244>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -93,6 +93,7 @@
 * Norwegian: {{t|no|stikke}}
 * Portuguese: {{t-|pt|esfaquear}},  {{t|pt|apunhalar}}
 * Romanian: {{t|ro|împunge}}
+* [[Romansch]]: {{t|rm|piztgar}}
 * Russian: {{t|ru|закалывать|tr=zakályvat’|sc=Cyrl}}
 * [[Santali]]: {{tø|sat|ᱨᱳᱜ|tr=rok'|sc=Olck}}
 * Serbian: {{t-|sr|bosti}}
