--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -129,6 +129,7 @@ Shares offered to the public:
 * Italian: {{t+|it|galleggiare}}
 * Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku), [[漂う]] (tadayou)
 {{trans-mid}}
+* Latin: {{t|la|fluctuo}}
 * Lithuanian: [[plūduriuoti]] {{impf}}; [[plaukti]] {{impf}}
 * Russian: [[плавать]] (plávat') {{impf}}; [[всплывать]] (vsplyvát') {{pf}}, [[всплыть]] (vsplyt') {{impf}} ''to reach the surface''
 * Spanish: {{t+|es|flotar}}
