t+gl:[[flotar]] ([[WT:EDIT|Assisted]]) <float#7266396>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -126,6 +126,7 @@ Shares offered to the public:
 * Dutch: {{t+|nl|drijven}}
 * Finnish: {{t+|fi|kellua}}
 * French: {{t+|fr|flotter}}
+* [[Galician]]: {{t|gl|flotar}}
 * German: {{t+|de|treiben}}, {{t+|de|schwimmen}}, {{t+|de|schweben}}
 * Italian: {{t+|it|galleggiare}}
 * Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku), [[漂う]] (tadayou)
