--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -226,7 +226,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
-* Latin: [[lūdere]]
+* Latin: [[lūdo]], [[lūdere]]
 * Lithuanian: {{t-|lt|žaisti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|игра|tr=ígra|sc=Cyrl|xs=Macedonian}}
 * Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
