t+gl:[[xogar]] ([[WT:EDIT|Assisted]]) <play#7266522>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -214,6 +214,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Esperanto: {{t-|eo|ludi|xs=Esperanto}}
 * Finnish: {{t+|fi|leikkiä}}
 * French: {{t+|fr|jouer}}
+* [[Galician]]: {{t|gl|xogar}}
 * German: {{t+|de|spielen}}
 * Hebrew: [[לשחק]] (l'sāḥeq), [[להשתעשע]] (l'hishtāʿāsheʿā)
 * Hungarian: {{t+|hu|játszik}}
