t+rm:[[giugar]] ([[WT:EDIT|Assisted]]) <play#7266531>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -235,6 +235,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Polish: [[bawić]] (się)
 * Portuguese: {{t+|pt|jogar}}
 * Romanian: {{t+|ro|juca}}
+* [[Romansch]]: {{t|rm|giugar}}
 * Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
 * Slovak: [[hrať sa]]
 * Slovene: {{t+|sl|igrati se}}
