--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -116,6 +116,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * Polish: {{t+|pl|liczyć}}
 * Portuguese: {{t+|pt|contar}}
 * Romanian: [[număra]]
+* [[Romansch]]: {{t|rm|enumerar}}
 * Russian: [[считать]] ''imperf''
 * Slovene: [[šteti]], [[prešteti]]
 * Spanish: {{t+|es|contar}}
