--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -89,6 +89,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * Anglo-Norman: {{tø|xno|counter}}
 * Armenian: {{t-|hy|հաշվել|tr=hašvel|sc=Armn|xs=Armenian}}
 * [[Breton]]: [[kontañ]]
+* [[Catalan]]: {{t|ca|comptar}}
 * [[Classical Nahuatl]]: {{tø|nci|pōhua}}
 * Czech: {{t+|cs|počítat}}
 * Danish: [[tælle]]
