--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -84,6 +84,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Arabic: {{t|ar|معدة|f|tr=má`ida|sc=Arab}}, {{t|ar|بطن|m|tr=baTn|sc=Arab}}
 * Aramaic:
 *: Syriac: [[ܟܪܣܐ]] (karsā’) {{f}}
+* Greek: {{t|el|στομάχι|n|tr=stomákhi|sc=Grek}}
 *: Hebrew: [[כרסא]] (karsā’) {{f}}
 * Chinese:
 *: Mandarin: {{t|cmn|腹部|tr=fùbù|sc=Hani|xs=Mandarin}},  {{t-|cmn|肚子|tr=dùzi|sc=Hani|xs=Mandarin}}
@@ -94,8 +95,8 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * German: {{t+|de|Bauch|m}}
 * Hebrew: {{t+|he|בטן|f|sc=Hebr}}
 * Hindi: [[पेट]] (pēṭa) {{m}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|has}}
+{{trans-mid}}
 * Italian: {{t+|it|pancia|f}}
 * Japanese: [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara)
 * Kalenjin: {{tø|kln|moek}}
