t+el:[[κοιλιά]] ([[WT:EDIT|Assisted]]) <stomach#7269539>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -92,7 +92,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Finnish: {{t+|fi|maha}}
 * French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
 * German: {{t+|de|Bauch|m}}
-* Greek: {{t|el|στομάχι|n|tr=stomákhi|sc=Grek}}
+* Greek: {{t|el|στομάχι|n|tr=stomákhi|sc=Grek}},  {{t|el|κοιλιά|f|tr=kiliá|sc=Grek}}
 * Hebrew: {{t+|he|בטן|f|sc=Hebr}}
 * Hindi: [[पेट]] (pēṭa) {{m}}
 * Hungarian: {{t+|hu|has}}
