sorted/rebalanced translations, trans link [[Kalenjin]], trans link [[Luhya]], trans link [[Luo]] <stomach#7269690>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -52,13 +52,13 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Icelandic: {{t+|is|magi|m}}
 * [[Ido]]: [[stomako]]
 * Italian: {{t+|it|stomaco|m}}
-{{trans-mid}}
 * Japanese: [[胃]] ([[い]], i), [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara),
+{{trans-mid}}
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl|xs=Kazakh}}
 * Korean: [[위]] (wi)
 * Latin: [[stomachus]] {{m}}
 * [[Lower Sorbian]]: [[žołdk]] {{m}}
-* Luo: {{tø|luo|ich|xs=Luo}}
+* [[Luo]]: {{tø|luo|ich|xs=Luo}}
 * [[Macedonian]]: {{t|mk|желудник|m|tr=žéludnik|sc=Cyrl|xs=Macedonian}},  {{t-|mk|стомак|m|tr=stómak|sc=Cyrl|xs=Macedonian}}
 * Maltese: {{t-|mt|stonku|m|xs=Maltese}}
 * [[Mandinka]]: {{tø|mnk|konoo|xs=Mandinka}}
@@ -96,14 +96,14 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Hebrew: {{t+|he|בטן|f|sc=Hebr}}
 * Hindi: [[पेट]] (pēṭa) {{m}}
 * Hungarian: {{t+|hu|has}}
-{{trans-mid}}
 * Italian: {{t+|it|pancia|f}}
+{{trans-mid}}
 * Japanese: [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara)
-* Kalenjin: {{tø|kln|moek}}
+* [[Kalenjin]]: {{tø|kln|moek}}
 * Korean: [[배]] (bae)
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t|ku|ورگ|tr=wirg|sc=ku-Arab}}
-* Luhya: {{tø|luy|enda}}
+* [[Luhya]]: {{tø|luy|enda}}
 * [[Macedonian]]: {{t-|mk|стомак|m|tr=stómak|sc=Cyrl|xs=Macedonian}},  {{t-|mk|мев|m|tr=mev|sc=Cyrl|xs=Macedonian}}
 * Maltese: {{t+|mt|żaqq|f|xs=Maltese}}
 * Norwegian: {{t-|no|mage|m}}, {{t+|no|buk|m}}
