/* Noun */ +DT: [[unit cost]]; +ca: trans; <cost#7272181>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -18,8 +18,12 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 # Amount of [[money]], time, etc. that is [[required]] or used.
 # A negative [[consequence]] or loss that occurs or is required to occur.
 
+====Derived terms====
+* [[unit cost]]
+
 ====Translations====
 {{trans-top|amount of money, time, etc.}}
+* [[Catalan]]: {{t+|ca|preu|m}}
 * [[Chamicuro]]: {{tø|ccc|iso'no}}
 * Chinese: {{zh-tsp|費用|费用|fèiyòng}}, {{t-|cmn|成本|tr=chéngběn|sc=Hani|xs=Mandarin}}, {{zh-tsp|花費|花费|huāfèi}}
 * Czech: {{t-|cs|náklad|m}}, {{t+|cs|cena|f}}
@@ -60,7 +64,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 
 {{checktrans-top}}
 * {{ttbc|Indonesian}}: [[biaya]], [[ongkos]]
-* {{ttbc|Portuguese}}: [[Custo]]
+* {{ttbc|Portuguese}}: [[custo]]
 {{trans-bottom}}
 
 ===Verb===
