--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -107,7 +107,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * [[Ido]]: {{t|io|kontar|xs=Ido}}
 * Italian: {{t+|it|contare}}
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
-* Latin: {{t-|la|numero}}, {{t-|la|numerare}}, {{t-|la|computo}}, {{t-|la|computare|alt=computāre}}
+* Latin: {{t-|la|numero}}, {{t-|la|computo}}
 * [[Macedonian]]: {{t|mk|брои|tr=brói|sc=Cyrl|xs=Macedonian}}
 * Malay: {{t+|ms|kira|xs=Malay}}
 * Middle English: {{tø|enm|counten}}
