--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -131,7 +131,7 @@ Shares offered to the public:
 * Italian: {{t+|it|galleggiare}}
 * Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku), [[漂う]] (tadayou)
 {{trans-mid}}
-* Latin: {{t|la|fluctuo}},  {{t|la|fluctuare}}
+* Latin: {{t|la|fluctuo}}
 * Lithuanian: [[plūduriuoti]] {{impf}}; [[plaukti]] {{impf}}
 * Portuguese: {{t|pt|boiar}},  {{t|pt|flutuar}}
 * Romanian: {{t|ro|pluti}}
