--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -72,6 +72,7 @@
 {{trans-top|apply force to (something) so it comes towards one}}
 * Arabic: {{Arab|[[جر]]}} (járra)
 * Armenian: {{t-|hy|քաշել|tr=k'ašel|sc=Armn|xs=Armenian}}, {{t-|hy|ձգել|tr=jgel|sc=Armn|xs=Armenian}}
+* [[Catalan]]: {{t|ca|tirar}}
 * Chinese: [[拖拉]] (tuōlā)
 * Czech: {{t-|cs|táhnout}}
 * Dutch: {{t+|nl|trekken}}
