--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -86,6 +86,7 @@
 * Japanese: [[引く]] (ひく, hiku)
 * Korean: [[끌다]] (kkeulda)
 * Kurdish: {{ku-Arab|[[ڕاکێشه‌]]}}
+* Latin: {{t|la|vello}}
 * Polish: [[ciągnąć]], [[pociągnąć]]
 * Portuguese: {{t+|pt|puxar}}
 * Russian: {{t|ru|тянуть|tr=tjanút’|sc=Cyrl}}
