--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -79,6 +79,7 @@
 * Esperanto: {{t-|eo|tiri|xs=Esperanto}}
 * Finnish: {{t+|fi|vetää}}
 * French: {{t+|fr|tirer}}
+* [[Galician]]: {{t|gl|puxar}}
 * German: {{t+|de|ziehen}}
 * Hungarian: {{t+|hu|húz}}
 * Italian: [[tirare]] [[:it:tirare|(it)]]
