t+gl:[[tirar]] ([[WT:EDIT|Assisted]]) <pull#7281114>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -79,7 +79,7 @@
 * Esperanto: {{t-|eo|tiri|xs=Esperanto}}
 * Finnish: {{t+|fi|vetää}}
 * French: {{t+|fr|tirer}}
-* [[Galician]]: {{t|gl|puxar}}
+* [[Galician]]: {{t|gl|puxar}},  {{t|gl|tirar}}
 * German: {{t+|de|ziehen}}
 * Hungarian: {{t+|hu|húz}}
 * Italian: [[tirare]] [[:it:tirare|(it)]]
