--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -89,7 +89,7 @@
 * Kurdish: {{ku-Arab|[[ڕاکێشه‌]]}}
 * Latin: {{t|la|vello}},  {{t|la|traho}}
 * Polish: [[ciągnąć]], [[pociągnąć]]
-* Portuguese: {{t+|pt|puxar}},  {{t|pt|tirar}}
+* Portuguese: {{t+|pt|puxar}}
 * Romanian: {{t|ro|trage}}
 * Russian: {{t|ru|тянуть|tr=tjanút’|sc=Cyrl}}
 * Spanish: {{t+|es|tirar}}
