t+rm:[[trair]] ([[WT:EDIT|Assisted]]) <pull#7281315>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -91,6 +91,7 @@
 * Polish: [[ciągnąć]], [[pociągnąć]]
 * Portuguese: {{t+|pt|puxar}},  {{t|pt|tirar}}
 * Romanian: {{t|ro|trage}}
+* [[Romansch]]: {{t|rm|trair}}
 * Russian: {{t|ru|тянуть|tr=tjanút’|sc=Cyrl}}
 * Spanish: {{t+|es|tirar}}
 * Swahili: [[kuvuta]]
