--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -67,8 +67,8 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Kamba]]: {{tø|kam|Israel}}
 * [[Kannada]]: [[ಇಸ್ರೇಲ್]]
 * [[Kikuyu]]: {{tø|ki|Israel}}
-{{trans-mid}}
 * Korean: {{t|ko|이스라엘|tr=Iseura-el|sc=Kore}}
+{{trans-mid}}
 * Latvian: {{t-|lv|Izraēla|xs=Latvian}},  {{t|lv|Izraēlas Valsts|xs=Latvian}}
 * Lithuanian: {{t|lt|Izraelis|m|xs=Lithuanian}},  {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
 * [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
@@ -78,6 +78,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Mansoanka]]: {{tø|msw|Israeli}}
 * [[Marathi]]: [[इस्रायल]] (isrāyal)
 * [[Meru]]: {{tø|mer|Israel}}
+* Navajo: {{tø|nv|Ízrel Bikéyah}}
 * Norwegian: {{t+|no|Israel}}
 * [[Old Church Slavonic]]: [[Їздраил҄ь]]
 * [[Pashto]]: {{ps-Arab|[[اسرايل]]}}
