--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -209,6 +209,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-bottom}}
 
 {{trans-top|communications}}
+* French: {{t|fr|pont}}
 * Spanish: {{t-|es|pasarela|f}}
 {{trans-mid}}
 * Swahili: {{t+|sw|daraja|xs=Swahili}}
