t+nv:[[Dáághanii diné'i' bikéyah]] ([[WT:EDIT|Assisted]]) <France#7330865>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -100,6 +100,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Mongolian: [[Франц улс]] (Frants uls)
 * Nauruan: {{t-|na|France|xs=Nauruan}}
 * Navajo: {{tø|nv|Dáághanii diné'i' bikéyah}}
+* Navajo: {{tø|nv|Dáághanii diné'i' bikéyah}}
 * Norwegian: [[Frankrike]] (Franske Republikk, Republikken Frankrike)
 * [[Novial]]: [[Fransia]]
 * [[Occitan]]: [[França]]
