--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -18,6 +18,21 @@ From {{etyl|es}} and {{etyl|fr}} {{term|libre||[[freedom]], [[liberty]]|lang=es}
 
 ----
 
+==Filipino==
+
+===Pronunciation===
+* {{IPA|/ˈlibɾɛ/|lang=fil}}
+
+===Adjective===
+{{infl|fil|noun}}
+
+#[[free|Free]]; without [[charge]]; [[gratis]].
+
+===See also===
+*[[malaya]]
+
+----
+
 ==French==
 
 ===Etymology===
@@ -48,6 +63,21 @@ From {{etyl|la|fr}} {{term|liber|lang=la}}
 {{gl-adj|f=libre}}
 
 # [[free]], not captive, [[unbound]]
+
+----
+
+==Hiligaynon==
+
+===Pronunciation===
+* {{IPA|/ˈlibɾɛ/|lang=hil}}
+
+===Etymology===
+{{etyl|es|hil}} {{term|libre|lang=es}}.
+
+===Adjective===
+{{hil-noun|líbre}}
+
+#[[free|Free]]; without [[charge]]; [[gratis]].
 
 ----
 
@@ -84,6 +114,28 @@ From {{etyl|la|es}} {{term|liber|lang=la}}
 * [[libertad]]
 * [[libérrimo]]
 * [[libremente]]
+
+====Descendants====
+*Hiligaynon: {{l|hil|libre}}
+*Tagalog: {{l|tl|libre}}
+
+----
+
+==Tagalog==
+
+===Pronunciation===
+* {{IPA|/ˈlibɾɛ/|lang=tl}}
+
+===Etymology===
+{{etyl|es|tl}} {{term|libre|lang=es}}.
+
+===Adjective===
+{{tl-noun|líbre}}
+
+#[[free|Free]]; without [[charge]]; [[gratis]].
+
+===See also===
+*[[malaya]]
 
 [[af:libre]]
 [[cs:libre]]
