iwiki +[[:kn:curve]] <curve#7333016>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -243,6 +243,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 [[hy:curve]]
 [[io:curve]]
 [[it:curve]]
+[[kn:curve]]
 [[lo:curve]]
 [[hu:curve]]
 [[nl:curve]]
