--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -180,6 +180,7 @@ From {{etyl|de|da}} {{term|Feld|lang=de}}, from {{etyl|goh|da}} {{term|feld|lang
 [[it:felt]]
 [[ku:felt]]
 [[hu:felt]]
+[[ml:felt]]
 [[ja:felt]]
 [[no:felt]]
 [[pl:felt]]
