--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -403,16 +403,14 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{checktrans-top}}
 * {{ttbc|Albanian}}: [[pret]]
 * {{ttbc|Bulgarian}}: [[сека]]
-* {{ttbc|Catalan}}: [[tallar]]
 * {{ttbc|Croatian}}: [[rezati]]
 * {{ttbc|Dutch}}: [[snijden]], [[afsnijden]], [[knippen]]
 * {{ttbc|Dyirbal}}: [[nudin]], [[gunban]], [[banyin]] ([[Guwal]]); [[jalnggan]], [[bubaman]] ([[Jalnguy]])
 * {{ttbc|Esperanto}}: [[tranĉi]]
-* {{ttbc|French}}: [[couper]]
 * {{ttbc|Hungarian}}: [[vág]]
 {{trans-mid}}
 * {{ttbc|Indonesian}}: [[potong]], [[kerat]], [[iris]], [[memotong]]
-* {{ttbc|Romanian}}: [[tăia]], [[croi]]
+* {{ttbc|Romanian}}: [[croi]]
 * {{ttbc|Serbian}}: [[iseći]] (1,2,3,7,8), [[rez]] (5), [[spustiti]] (6), [[sniziti]] (6), [[pobeći]] (10)
 * {{ttbc|Telugu}}: [[కోయు]] (kOyu) (1,2), [[తెంచు]] (teMchu)(3), [[కోత వేయు]] (kOta vEyu) (6), [[ఖండించుకొను]] (khaMDiMchukonu) (8)
 {{trans-bottom}}
