--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -37,7 +37,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 {{trans-mid}}
 * Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru)
 * Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
-* Latin: {{t|la|vomo}}, {{t|la|vomito}} (to vomit frequently or continually)
+* Latin: {{t|la|vomo}}, {{t|la|vomito}}
 * Lithuanian: {{t|lt|vemti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|повраќа|tr=póvraḱa|sc=Cyrl|xs=Macedonian}},  {{t-|mk|блуе|tr=blúe|sc=Cyrl|xs=Macedonian}}
 * Maltese: [[irrimetta]] {{m}}, [[irrimettat]] {{f}}, [[qala']] {{m}}, [[qalgħat]] {{f}}
