--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -1,5 +1,6 @@
 {{wikipedia|dab=felt}}
 ==English==
+[[File:Filc2008 r. 002.jpg|thumb|Felt cloths.]]
 
 {{rank|best|word|light|248|felt|since|use|used}}
 
