--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -57,7 +57,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * {{trreq|Esperanto}}
 * Estonian: (''without weapons'') {{t|et|kaklema}}, (''with weapons'') {{t|et|võitlema}}
 * Finnish: (''without weapons'') {{t-|fi|tapella}}, (''with weapons'') {{t+|fi|taistella}}
-* French: {{t-|fr|se battre}}, {{t+|fr|combattre}}
+* French: {{t-|fr|se battre}}
 * [[Galician]]: {{t|gl|loitar}}
 * Georgian: [[ბრძოლა]] (brdzola), [[შებრძოლება]] (šebrdzoleba)
 * German: [[kämpfen]], [[fechten]], [[streiten]] ''(archaic)''
@@ -74,7 +74,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
 * Lao: {{t-|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo|xs=Lao}}, {{t-|lo|ຮົບ|tr=hop|sc=Laoo|xs=Lao}}
-* Latin: {{t-|la|pugno}}
+* Latin: {{t-|la|pugno}}, {{t-|la|luctor}}
 * {{trreq|Latvian}}
 * Lithuanian: {{t|lt|kautis|xs=Lithuanian}}
 * {{trreq|Maltese}}
@@ -82,7 +82,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Old English: {{t-|ang|feohtan|xs=Old English}}
 * Persian: {{t|fa|آوریدن |sc=fa-Arab|xs=Persian}},  {{t|fa|آفندیدن|sc=fa-Arab|xs=Persian}},  {{t|fa|پیکار|sc=fa-Arab|xs=Persian}},  {{t|fa|جنك|sc=fa-Arab|xs=Persian}}
 * Polish: {{t+|pl|walczyć}}
-* Portuguese: {{t+|pt|lutar}}
+* Portuguese: {{t+|pt|lutar}} com/contra
 * Romanian: {{t|ro|lupta}}, {{t|ro|se bate}}
 * [[Romansch]]: {{t|rm|lutgar}}
 * Russian: {{t|ru|драться|tr=drát'sja|sc=Cyrl}} {{impf}}, {{t|ru|биться|tr=bít'sja|sc=Cyrl}} {{impf}}, {{t+|ru|бороться|tr=borót’sja|sc=Cyrl}} ''wrestle'', {{t|ru|сражаться|tr=sražát'sja|sc=Cyrl}} {{impf}} ''in a duel or bttle''
@@ -108,7 +108,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 {{trans-mid}}
 * [[Khmer]]: {{Khmr|[[តស៊ូ]]}} (dtor-sū)
 * Norwegian: {{t|no|kjempe for}}
-* Portuguese: {{t+|pt|lutar}}
+* Portuguese: {{t+|pt|lutar}} 
 * Russian: {{t+|ru|бороться|tr=borót’sja|sc=Cyrl}}, {{t|ru|сражаться|tr=sražát'sja|sc=Cyrl}} {{impf}}
 * Spanish: {{t-|es|luchar}}
 * Swahili: {{t+|sw|vita|xs=Swahili}}
@@ -146,7 +146,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * [[Khmer]]: {{Khmr|[[ប្រយុទ្ឋ]]}} (bprəyŭt)
 * Korean: [[싸우다]] (ssauda)
 * Norwegian: {{t|no|slåss}}
-* Portuguese: [[lutar]] com/contra, [[combater]]
+* Portuguese: {{t|pt|combater}}
 * Romanian: {{t|ro|combate}}
 * [[Romansch]]: {{t|rm|cumbatter}}
 * Russian: {{t|ru|биться|tr=bít's'a|sc=Cyrl}} {{impf}}, {{t|ru|сражаться|tr=sražát's'a|sc=Cyrl}} {{impf}}
