--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -299,7 +299,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Irish: {{t-|ga|bain|xs=Irish}} {{i|grass, hay, etc.}}
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る|sc=Jpan}} ({{t+|ja|きる|sc=Jpan}}, kiru)
-* Latin: {{t|la|seco}}
+* Latin: {{t|la|seco}},  {{t|la|curto}}
 * Portuguese: {{t+|pt|cortar}}
 * Romanian: {{t|ro|tăia}}
 * [[Romansch]]: {{t|rm|tagliar}}
