--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -272,7 +272,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Hebrew: [[לחתוך]] (lakhtokh) (''transitive - to cut something intentionally''); [[להיחתך]] (lehikhatekh) (''intransitive - to be cut unintentionally'')
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る|sc=Jpan}} ({{t+|ja|きる|sc=Jpan}}, kiru)
-* Latin: {{t|la|interseco}}
+* Latin: {{t|la|inseco}}
 * Polish: {{t+|pl|ciąć}}
 * Portuguese: {{t+|pt|cortar}}
 * Romanian: {{t|ro|tăia}}
@@ -299,7 +299,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Irish: {{t-|ga|bain|xs=Irish}} {{i|grass, hay, etc.}}
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る|sc=Jpan}} ({{t+|ja|きる|sc=Jpan}}, kiru)
-* Latin: {{t|la|seco}},  {{t|la|curto}}
+* Latin: {{t|la|seco}}, {{t|la|interseco}}, {{t|la|curto}}
 * Portuguese: {{t+|pt|cortar}}
 * Romanian: {{t|ro|tăia}}
 * [[Romansch]]: {{t|rm|tagliar}}
