t+nl:[[zenit]] ([[WT:EDIT|Assisted]]) <zenith#7355760>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -64,6 +64,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 * Armenian: {{t-|hy|զենիթ|tr=zenit'|sc=Armn|xs=Armenian}}
 * Czech: {{t+|cs|nadhlavník|m}}, {{t+|cs|zenit|m}}
 {{trans-mid}}
+* Dutch: {{t|nl|zenit|n}}
 * Finnish: {{t|fi|lakipiste}}
 * Russian: {{t+|ru|зенит|m|tr=zenít|sc=Cyrl}}
 {{trans-bottom}}
