--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -8,7 +8,7 @@
 * {{audio|en-us-Germany.ogg|Audio (US)}}
 
 ===Proper noun===
-{{en-proper noun|German|ies|-}}
+{{en-proper noun|German|ies|pl2=Germanys|-}}
 
 # {{uncountable}} Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
 # (''countable''; hist. 1949-1990) Either of the German states, FRG and GDR. ''The two Germanies exchanged permanent representatives in 1974.''
