--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -39,7 +39,7 @@
 {{ko-hanja|hangeul=곤|rv=gon|mr=kon}}
 
 # ([[땅]] 곤, ''ttang-'') [[earth]] 
-# ([[곤괘]] 곤, ''gongwae-'') the eighth of the [[Eight Trigrams]] 
+# ([[곤괘]] 곤, ''gongwae-'') {{unicode|☷}} or the eighth of the [[Eight Trigrams]],  ({{unicode|☰☱☲☳☴☵☶☷}} or [[팔괘]] ([[w:Ba gua (concept)|八卦]], ''palgwae'')) that is equivalent to the 3-digit binary number. Four out of eight trigrams are included in the [[w:flag of South Korea]].  
 # ([[황후]] 곤, ''hwanghu-'') [[queen]]
 
 ====Antonyms====
