t+hy:[[փոր]] t-balance ([[WT:EDIT|Assisted]]) <stomach#7362122>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -85,6 +85,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Aramaic:
 *: Syriac: [[ܟܪܣܐ]] (karsā’) {{f}}
 *: Hebrew: [[כרסא]] (karsā’) {{f}}
+* Armenian: {{t|hy|փոր|tr=p’or|sc=Armn}}
 * Chinese:
 *: Mandarin: {{t|cmn|腹部|tr=fùbù|sc=Hani|xs=Mandarin}},  {{t-|cmn|肚子|tr=dùzi|sc=Hani|xs=Mandarin}}
 * Czech: {{t-|cs|břicho|n}}
@@ -95,9 +96,9 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Greek: {{t|el|στομάχι|n|tr=stomákhi|sc=Grek}},  {{t|el|κοιλιά|f|tr=kiliá|sc=Grek}}
 * Hebrew: {{t+|he|בטן|f|sc=Hebr}}
 * Hindi: [[पेट]] (pēṭa) {{m}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|has}}
 * Italian: {{t+|it|pancia|f}}
-{{trans-mid}}
 * Japanese: [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara)
 * [[Kalenjin]]: {{tø|kln|moek}}
 * Korean: [[배]] (bae)
