iwiki +[[:kn:choose]] <choose#7368960>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -154,6 +154,7 @@
 [[io:choose]]
 [[id:choose]]
 [[it:choose]]
+[[kn:choose]]
 [[kk:choose]]
 [[ku:choose]]
 [[lo:choose]]
@@ -169,6 +170,6 @@
 [[ta:choose]]
 [[te:choose]]
 [[th:choose]]
-[[vi:choose]]
 [[uk:choose]]
+[[vi:choose]]
 [[zh:choose]]
