--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -55,7 +55,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 {{trans-top|hardened block used for building}}
 * [[Afrikaans]]: {{t-|af|baksteen|xs=Afrikaans}}
 * Arabic: {{t|ar|طوبة|f|tr=Tūba|sc=Arab}},  {{t|ar|لبنة|f|tr=lábina|sc=Arab}}
-* Armenian: [[աղյուս]] (aġyus)
+* Armenian: {{t|hy|աղյուս|tr=aġyus}}
 * [[Basque]]: [[adreilu]]
 * Bosnian: {{t-|bs|cigla|f}}
 * Bulgarian: {{t+|bg|тухла|sc=Cyrl}}
@@ -103,6 +103,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 
 {{trans-top|a building material}}
 * [[Afrikaans]]: {{t-|af|baksteen|xs=Afrikaans}}
+* Armenian: {{t|hy|աղյուս|tr=aġyus}}
 * Bulgarian: {{t|bg|тухли|p|sc=Cyrl}}
 * Chinese traditional/simplified: [[磚塊]], [[砖块]] (zhuān kuài), [[磚頭]], [[砖头]] (zhuān tóu)
 * Danish: [[mursten]] {{c}}
