t+el:[[γραμματέας]] t+el:[[υπουργός]] t-balance ([[WT:EDIT|Assisted]]) <secretary#7371783>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -40,12 +40,13 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * Finnish: {{t-|fi|sihteeri}}
 * French: {{t+|fr|secrétaire|m|f}}
 * German: {{t+|de|Sekretär|m}},  {{t-|de|Sekretärin|f}}
+* Greek: {{t|el|γραμματέας|m|f|tr=gramatéas|sc=Grek}}
 * Hebrew: {{he-translation|מזכיר|mazkir}} {{m}}
 * Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
 * [[Ido]]: {{t+|io|sekretario|xs=Ido}}
 * [[Interlingua]]: [[secretaria]] {{f}}
-* Italian: {{t+|it|segretario|m}}
 {{trans-mid}}
+* Italian: {{t+|it|segretario|m}}
 * Japanese: {{t-|ja|秘書|tr=ひしょ, hisho|sc=Jpan}}
 * Korean: [[비서]] (biseo)
 * Kurdish:
@@ -70,6 +71,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * Esperanto: {{t-|eo|sekretario|xs=Esperanto}}
 * Finnish: {{t+|fi|ministeri}}
 * French: {{t+|fr|secrétaire}}
+* Greek: {{t|el|υπουργός|m|f|tr=ipurgós|sc=Grek}}
 * Hungarian: {{t+|hu|miniszter}}, {{t-|hu|államtitkár}}
 * [[Interlingua]]: [[secretaria]] {{f}}
 * Japanese: {{t+|ja|大臣|tr=だいじん, daijin|sc=Jpan}}, {{t|ja|長官|tr=ちょうかん, chōkan|sc=Jpan}}
@@ -90,6 +92,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * Czech: {{t-|cs|tajemník|m}}
 * Finnish: {{t-|fi|sihteeri}}
 {{trans-mid}}
+* Greek: {{t|el|γραμματέας|m|f|tr=gramatéas|sc=Grek}}
 * Hungarian: {{t-|hu|főtitkár}}
 * Swahili: {{t|sw|karani|xs=Swahili}}
 {{trans-bottom}}
