--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -101,6 +101,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Turkish: {{t+|tr|İsrail}}
 * Ukrainian: [[Ізраїль]] (Izrajil’) {{m}}
 * Urdu: {{t-|ur|اسرائیل|sc=ur-Arab|xs=Urdu}}
+* [[Yiddish]]: {{t|yi|ישראל|sc=Hebr|tr=Yisroel|alt=ישׂראל}}
 {{trans-bottom}}
 
 ===See also===
