sorted/rebalanced translations, trans unlink Bengali <pen#7384238>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -96,7 +96,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Arabic: {{Arab|[[قلم]]}} (qálam) {{m}}, {{Arab|[[قلم حبر]]}} (qálam ħebr) {{m}}
 *: Morocco: {{tø|ary|ستيلو|tr=stīlū|sc=Arab}}
 * Armenian: [[գրիչ]] (grič)
-* [[Bengali]]: {{t|bn|কলম |sc=Beng|xs=Bengali}},  {{t|bn|লিখনী |sc=Beng|xs=Bengali}}
+* Bengali: {{t|bn|কলম |sc=Beng|xs=Bengali}},  {{t|bn|লিখনী |sc=Beng|xs=Bengali}}
 * Bulgarian: {{t|bg|писалка|tr=pisalka|sc=Cyrl}}
 * Chinese: [[鋼筆]], [[钢笔]] (gāngbǐ), [[筆]], [[笔]] (bǐ), [[圓珠筆]], [[圆珠笔]] (yuánzhūbǐ)
 * Croatian: {{t-|hr|pero|n}}, {{t-|hr|kemijska olovka|f}}
@@ -113,8 +113,8 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Irish: {{t+|ga|peann|m|xs=Irish}}
 * Italian: {{t+|it|penna|f}}
 * Japanese: [[ペン]] (pen)
-* [[Kikuyu]]: {{tø|ki|karamu}}
 {{trans-mid}}
+* [[Kikuyu]]: {{tø|ki|karamu}}
 * Korean: [[펜]] (pen)
 * Kurdish: {{ku-Arab|[[پێنووس]]}}
 * [[Luhya]]: {{tø|luy|ekalamu}}
@@ -147,7 +147,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 =====Translations=====
 {{trans-top|to write}}
-* [[Bengali]]: {{t|bn|লেখা |sc=Beng|xs=Bengali}},  {{t|bn|লিখন |sc=Beng|xs=Bengali}}
+* Bengali: {{t|bn|লেখা |sc=Beng|xs=Bengali}},  {{t|bn|লিখন |sc=Beng|xs=Bengali}}
 * Dutch: [[opschrijven]], [[schrijven]], (colloquial: [[oppennen]], [[neerpennen]])
 * Finnish: [[kynäillä]]
 * French: {{t+|fr|écrire}}
