t+hi:[[पदार्थ]] t-balance ([[WT:EDIT|Assisted]]) <substance#7391846>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -34,9 +34,10 @@ From {{etyl|fro}} ''[[#French|substance]]''.
 * German: {{t+|de|Substanz|f}}, {{t+|de|Stoff|m}}
 * Greek: [[ουσία]] (usía) {{f}}
 * Hebrew: {{he-translation|חומר|khómer}} {{m}}
+* Hindi: {{t|hi|पदार्थ|m|tr=padārth|sc=Deva}}
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
-* Japanese: {{t+|ja|物質|tr=busshitsu|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t+|ja|物質|tr=busshitsu|sc=Jpan}}
 * Latvian: [[viela]] {{f}}
 * Norwegian: {{t-|no|substans|m}}, {{t+|no|masse|m}}
 * Polish: {{t+|pl|substancja|f}}
