--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -253,7 +253,7 @@ Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from whence the wines wer
 * French: [[vin de Porto]] {{m}}
 * German: {{t+|de|Portwein|m}}
 {{trans-mid}}
-* Greek: [[πορτό]] {{n}}, [[οίνος Πορτογαλίας]] {{m}}
+* Greek: {{t|el|πορτό|n|tr=portó|sc=Grek}}
 * Italian: {{t+|it|porto|m}}
 * Portuguese: {{t+|pt|vinho do Porto|m}}
 * Spanish: [[vino de Oporto]] {{m}}
