--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -26,7 +26,7 @@
 * [[Catalan]]: {{t|ca|Estats Units d'Amèrica|m|p}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|sc=Hani|xs=Cantonese}}
-*: Mandarin: [[美利堅合衆國]], [[美利坚合众国]] (Měilìjiān Hézhòngguó); [[美國]], [[美国]] (Měiguó),  {{t|zh|美利堅合衆國|sc=Hani}},  {{t|zh|美利坚合众国|tr=Měilìjiān Hézhòngguó|sc=Hani}},  {{t|zh|美國|sc=Hani}},  {{t|zh|美国|tr=Měiguó|sc=Hani}}
+*: Mandarin: {{t|zh|美利堅合衆國|sc=Hani}},  {{t|zh|美利坚合众国|tr=Měilìjiān Hézhòngguó|sc=Hani}},  {{t|zh|美國|sc=Hani}},  {{t|zh|美国|tr=Měiguó|sc=Hani}}, t|zh|美|tr=Měi-|sc=Hani}} (''abbreviation'')
 * Croatian: {{t-|hr|Sjedinjene Američke Države|f|p}}
 * Czech: {{t-|cs|Spojené státy americké}}, {{t-|cs|Spojené státy}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}
@@ -48,7 +48,7 @@
 * [[Interlingua]]: [[Statos Unite de America]]
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá|xs=Irish}}, {{t|ga|Meiriceá|xs=Irish}}
 * Italian: {{t+|it|Stati Uniti d'America|m|p}}, (''short form'') {{t+|it|Stati Uniti|m|p}}, {{t|it|SUA}}
-* Japanese: {{t+|ja|米国|sc=Jpan}} (べいこく, Béikoku), {{t+|ja|アメリカ合衆国|sc=Jpan}} (アメリカがっしゅうこく, Ameriká Gasshūkoku)
+* Japanese: {{t+|ja|米国|tr=べいこく, Béikoku|sc=Jpan}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Ameriká Gasshūkoku|sc=Jpan}}, {{t|ja|米|tr=べい, Bei-|sc=Jpan}} (''abbreviation'')
 * Kazakh: [[Америка Құрама Штаттары]]
 * [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
 {{trans-mid}}
