--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -26,7 +26,7 @@
 * [[Catalan]]: {{t|ca|Estats Units d'Amèrica|m|p}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|sc=Hani|xs=Cantonese}}
-*: Mandarin: {{t|zh|美利堅合衆國|sc=Hani}},  {{t|zh|美利坚合众国|tr=Měilìjiān Hézhòngguó|sc=Hani}},  {{t|zh|美國|sc=Hani}},  {{t|zh|美国|tr=Měiguó|sc=Hani}}, t|zh|美|tr=Měi-|sc=Hani}} (''abbreviation'')
+*: Mandarin: {{t|zh|美利堅合衆國|sc=Hani}},  {{t|zh|美利坚合众国|tr=Měilìjiān Hézhòngguó|sc=Hani}},  {{t|zh|美國|sc=Hani}},  {{t|zh|美国|tr=Měiguó|sc=Hani}}, {{t|zh|美|tr=Měi-|sc=Hani}} (''abbreviation'')
 * Croatian: {{t-|hr|Sjedinjene Američke Države|f|p}}
 * Czech: {{t-|cs|Spojené státy americké}}, {{t-|cs|Spojené státy}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}
