format audio; + rhymes, homophones <jeudi#7409424>

--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -1,8 +1,10 @@
 ==French==
 
 ===Pronunciation===
-* {{audio|Fr-jeudi-fr-ouest.ogg|audio}}
 * {{IPA|/ʒø.di/|lang=fr}}, {{SAMPA|/Z2.di/}}
+* {{audio|Fr-jeudi-fr-ouest.ogg|Audio (France)}}
+* {{rhymes|i|lang=fr}}
+* {{homophones|jeudis|lang=fr}}
 
 ===Noun===
 {{fr-noun|m}}
