--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -27,7 +27,7 @@
 # {{defn|Japanese}}
 
 ====Readings====
-* {{ja-readings|on=[[しう]] (shiu), [[しゅ]] (shu), [[しん]] (shin), [[そん]] (son), [[しゅん]] (shun)|kun=[[みぞ]] (mizo)}}
+* {{ja-readings|on=[[しう]] (shiu), [[しゅ]] (shu), [[しん]] (shin), [[そん]] (son), [[しゅん]] (shun)|
 
 ----
 
