--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -19,7 +19,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 #: ''The [[pitcher]] threw a '''cut''' [[fastball]] that was slower than his usual [[pitch]].''
 #: '''''Cut''' brandy is a liquor made of brandy and hard grain liquor.''
 # {{context|of a gem}} [[carve|Carve]]d into a [[shape]]; not [[raw]].
-# {{cricket|of a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of [[point]].
+# {{cricket|of a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of [[point]].{{rfc}}
 # {{bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
 #* '''1988''', Steve Holman, "Christian Conquers Columbus", ''[[w:Iron Man (magazine)|Ironman]]'' '''47 (6):''' 28-34.
 #*: Or how 'bout Shane DiMora?  Could he possibly get rip-roaring '''cut''' this time around?
