--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -35,8 +35,8 @@
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 * [[Macedonian]]: [[желка]] {{f}}
-{{trans-mid}}
 * Norwegian: {{t-|no|skilpadde}}
+{{trans-mid}}
 * Polish: [[żółw lądowy]] {{m}}
 * Portuguese: {{t+|pt|tartaruga|f}}, {{t-|pt|jabuti|m}}
 * Romanian: [[ţestoasă]] {{f}}, [[broască ţestoasă]] {{f}}
@@ -51,7 +51,7 @@
 * Swahili: {{t+|sw|kobe|xs=Swahili}}
 * Swedish: [[sköldpadda]] [[:sv:sköldpadda|º]]
 * [[Telugu]]: [[తాబేలు]] (taabealu)
-* Tswana: {{t|tn|khudu}} (9/10)
+* [[Tswana]]: {{t|tn|khudu}} (9/10)
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
 * [[Uyghur]]:
 *: Cyrillic: [[ташпақа]]
