t+el:[[ευρωπαϊκός]] t-balance ([[WT:EDIT|Assisted]]) <European#7422629>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -32,8 +32,9 @@
 * Finnish: {{t+|fi|eurooppalainen}}
 * French: {{t+|fr|européen|m}}, {{t+|fr|européenne|f}}
 * German: {{t+|de|europäisch}}
-* Hungarian: {{t+|hu|európai}}
+* Greek: {{t|el|ευρωπαϊκός|tr=evropa'ikós|sc=Grek}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|európai}}
 * [[Interlingua]]: [[europee]]
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
 * Japanese: [[ヨーロッパ]]の (Yōroppa no), [[欧州]]の (Ōshū no)
