--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -65,6 +65,7 @@
 * French: {{t+|fr|Européen|m}}, {{t+|fr|Européenne|f}}
 * German: {{t+|de|Europäer|m}}, {{t+|de|Europäerin|f}}
 {{trans-mid}}
+* Greek: {{t|el|Ευρωπαίος|m|tr=evropéos|sc=Grek}},  {{t|el|Ευρωπαία|f|tr=evropéa|sc=Grek}}
 * Hungarian: [[európai]], [[européer]]
 * [[Interlingua]]: [[europeo]]
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
