iwiki +[[:mr:icon]] <icon#7422926>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -136,6 +136,7 @@ From {{etyl|grc|la}} '''{{polytonic|[[εἰκών]]}}''' (eikōn) "likeness, ima
 [[la:icon]]
 [[lt:icon]]
 [[hu:icon]]
+[[mr:icon]]
 [[pl:icon]]
 [[ru:icon]]
 [[simple:icon]]
