--- a/en/傏/傏.11167.wikitext
+++ b/en/傏/傏.11167.wikitext
@@ -3,9 +3,9 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人戈中口 (OILR)}}
 
-# to ward off
-# to parry
-# to keep out, as wind, rain, or cold
+# to [[ward off]]
+# to [[parry]]
+# to [[keep out]], as wind, rain, or cold
 
 ====References====
 * {{Han ref|kx=0113.070|dkj=00953|dj=0240.140|hdz=10205.040|uh=508F|ud=20623}}
