iwiki +[[:nl:Israel]] <Israel#7448294>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -214,6 +214,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 [[ku:Israel]]
 [[lt:Israel]]
 [[hu:Israel]]
+[[nl:Israel]]
 [[no:Israel]]
 [[pl:Israel]]
 [[pt:Israel]]
