--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -210,6 +210,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 [[gl:Israel]]
 [[ko:Israel]]
 [[hi:Israel]]
+[[io:Israel]]
 [[sw:Israel]]
 [[ku:Israel]]
 [[lt:Israel]]
