iwiki +[[:kn:float]] <float#7464320>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -228,6 +228,7 @@ Shares offered to the public:
 [[ko:float]]
 [[io:float]]
 [[it:float]]
+[[kn:float]]
 [[lo:float]]
 [[hu:float]]
 [[nl:float]]
@@ -239,6 +240,6 @@ Shares offered to the public:
 [[ta:float]]
 [[te:float]]
 [[th:float]]
-[[vi:float]]
 [[tr:float]]
+[[vi:float]]
 [[zh:float]]
