--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -66,9 +66,10 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Finnish: {{t-|fi|kaarre}},  {{t+|fi|kurvi}},  {{t+|fi|mutka}}
 * French: {{t+|fr|courbe|f}}
 * German: {{t+|de|Kurve|f}}
-{{trans-mid}}
 * Hebrew: {{he-translation|עקימה|'aqima}} {{f}}
 * Italian: {{t+|it|curva|f}}
+* Polish: {{t|pl|zakręt|m}}
+{{trans-mid}}
 * Russian: [[изгиб]] {{m}}, [[кривая]] {{f}}, [[поворот]] {{m}}
 * Spanish: {{t+|es|curva|f}}
 * Swedish: {{t+|sv|kurva|c}}
