Added IPA-transliteration <e.g.#7489203>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -10,7 +10,7 @@
 Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for example}}. ''Gratiā'' here is in the ablative case. Previously abbreviated to ''ex. gr.''
 
 ===Pronunciation===
-{{rfp}}
+* {{IPA|/iːdʒiː/}}
 
 ===Adverb===
 {{en-adv|-}}
