--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -158,6 +158,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Armenian: {{t|hy|քթարմատ|tr=k't'armat|xs=Armenian}}
 * Danish: {{t|da|næseben|n}}
 * Finnish: {{t|fi|nenän selkä}}
+* Greek: {{t|el|ράχη|f|tr=rákhi|sc=Grek}},  {{t|el|άκανθα|f|tr=ákanθa|sc=Grek}}
 {{trans-mid}}
 * Italian: {{t-|it|setto}} nasale {{m}}
 * Polish: {{t|pl|grzbiet|m}}
@@ -173,6 +174,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Finnish: {{t+|fi|silta}}, {{t|fi|hammassilta}}
 * French: {{t+|fr|bridge|m}}
 * German: {{t+|de|Brücke|f}}
+* Greek: {{t|el|γέφυρα|f|tr=yéfira|sc=Grek}}
 * Hungarian: {{t+|hu|hid|alt=híd}}
 {{trans-mid}}
 * Italian: {{t+|it|ponte|m}}
@@ -193,6 +195,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Finnish: {{t|fi|komentosilta}}
 * French: {{t+|fr|passerelle|f}}
 * German: {{t+|de|Brücke|f}}
+* Greek: {{t|el|γέφυρα|f|tr=yéfira|sc=Grek}}
 * Hungarian: {{t+|hu|hid|alt=híd}}
 * Polish: {{t|pl|mostek kapitański|m}}
 * Russian: {{t|ru|капитанский мостик|m|tr=kapitánskij móstik}}
@@ -210,8 +213,9 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 
 {{trans-top|communications}}
 * French: {{t+|fr|pont}}
-* Spanish: {{t-|es|pasarela|f}}
+* Greek: {{t|el|γέφυρα|f|tr=yéfira|sc=Grek}}
 {{trans-mid}}
+* Spanish: {{t-|es|pasarela|f}}
 * Swahili: {{t+|sw|daraja|xs=Swahili}}
 {{trans-bottom}}
 
