t+ro:[[a ]] ([[WT:EDIT|Assisted]]) <fight#7505627>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -176,6 +176,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Norwegian: {{t|no|bekjempe}}
 * Polish: {{t+|pl|walczyć}}
 * Portuguese: [[lutar]] contra, [[combater]], [[enfrentar]]
+* Romanian: {{t|ro|a }}
 * Russian: {{t|ru|биться|tr=bít's'a|sc=Cyrl}} {{impf}}, {{t|ru|сражаться|tr=sražát's'a|sc=Cyrl}} {{impf}}
 * Swahili: {{t+|sw|vita|xs=Swahili}}
 * Swedish: [[bekämpa]]
