t+uk:[[Нова Зеландія]] t+bg:[[Нова Зеландия]] t+be:[[Новая Зеландыя]] t+be:[[Новая Зэляндыя]] t-balance ([[WT:EDIT|Assisted]]) <New Zealand#7506417>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -20,9 +20,10 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 {{trans-top|country in Oceania}}
 * Arabic: {{t|ar|نيوزيلاندا|f|tr=nyuzilánda|sc=Arab}}
 * Armenian: [[Նոր Զելանդիա]] (Nor Zelandia)
+* Belarusian: {{t|be|Новая Зеландыя|f|tr=Nóvaja Zelándyja|sc=Cyrl}},  {{qualifier|Taraškevica orthography}} {{t|be|Новая Зэляндыя|f|tr=Nóvaja Zeljándyja|sc=Cyrl}}
 * Bosnian: {{t-|bs|Novi Zeland|m}}
 * [[Breton]]: [[Zeland-Nevez]]
-* Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
+* Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}},  {{t|bg|Нова Зеландия|f|tr=Nóva Zelándija|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|zh|新西蘭|sc=Hani}},  {{t|zh|新西兰|tr=Xīn-Xīlán|sc=Hani}},  {{qualifier|Taiwan}} {{t|zh|紐西蘭|sc=Hani}},  {{t|zh|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
 * Croatian: {{t-|hr|Novi Zeland|m}}
@@ -41,8 +42,8 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * [[Interlingua]]: [[Nove Zelanda]]
 * Italian: {{t+|it|Nuova Zelanda|f}}
 * Japanese: {{t-|ja|ニュージーランド|tr=Nyūjīrando|sc=Jpan}}
-* [[Kalenjin]]: {{tø|kln|Nyuziland}}
 {{trans-mid}}
+* [[Kalenjin]]: {{tø|kln|Nyuziland}}
 * [[Kamba]]: {{tø|kam|Nyuziland}}
 * [[Kikuyu]]: {{tø|ki|Nyuziland}}
 * Korean: {{t|ko|뉴질랜드|tr=Nyujillaendeu|sc=Kore}}
@@ -66,7 +67,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Swahili: {{t+|sw|Nyuzilandi|xs=Swahili}}
 * Swedish: {{t+|sv|Nya Zeeland}}
 * Turkish: {{t+|tr|Yeni Zelanda}}
-* Ukrainian: [[Нова Зеландія]] (Nóva Zelándija) {{f}}
+* Ukrainian: [[Нова Зеландія]] (Nóva Zelándija) {{f}},  {{t|uk|Нова Зеландія|f|tr=Nová Zelándija|sc=Cyrl}}
 * Welsh: [[Seland Newydd]]
 {{trans-bottom}}
 
