/* Translations */ <New Zealand#7506418>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -20,10 +20,10 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 {{trans-top|country in Oceania}}
 * Arabic: {{t|ar|نيوزيلاندا|f|tr=nyuzilánda|sc=Arab}}
 * Armenian: [[Նոր Զելանդիա]] (Nor Zelandia)
-* Belarusian: {{t|be|Новая Зеландыя|f|tr=Nóvaja Zelándyja|sc=Cyrl}},  {{qualifier|Taraškevica orthography}} {{t|be|Новая Зэляндыя|f|tr=Nóvaja Zeljándyja|sc=Cyrl}}
+* Belarusian: {{t|be|Новая Зеландыя|f|tr=Nóvaja Zelándyja|sc=Cyrl}}, {{t|be|Новая Зэляндыя|f|tr=Nóvaja Zeljándyja|sc=Cyrl}} {{qualifier|Taraškevica orthography}}
 * Bosnian: {{t-|bs|Novi Zeland|m}}
 * [[Breton]]: [[Zeland-Nevez]]
-* Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}},  {{t|bg|Нова Зеландия|f|tr=Nóva Zelándija|sc=Cyrl}}
+* Bulgarian: {{t|bg|Нова Зеландия|f|tr=Nóva Zelándija|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|zh|新西蘭|sc=Hani}},  {{t|zh|新西兰|tr=Xīn-Xīlán|sc=Hani}},  {{qualifier|Taiwan}} {{t|zh|紐西蘭|sc=Hani}},  {{t|zh|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
 * Croatian: {{t-|hr|Novi Zeland|m}}
@@ -67,7 +67,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Swahili: {{t+|sw|Nyuzilandi|xs=Swahili}}
 * Swedish: {{t+|sv|Nya Zeeland}}
 * Turkish: {{t+|tr|Yeni Zelanda}}
-* Ukrainian: [[Нова Зеландія]] (Nóva Zelándija) {{f}},  {{t|uk|Нова Зеландія|f|tr=Nová Zelándija|sc=Cyrl}}
+* Ukrainian: {{t|uk|Нова Зеландія|f|tr=Nová Zelándija|sc=Cyrl}}
 * Welsh: [[Seland Newydd]]
 {{trans-bottom}}
 
