--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -280,6 +280,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Russian: {{t|ru|резать|tr=rézat’|sc=Cyrl}}
 * Spanish: {{t+|es|cortar}},  {{t-|es|incidir}}
 * Swedish: {{t+|sv|skära}}
+* [[!Xóõ]]: [[gǂháá]]
 {{trans-bottom}}
 
 {{trans-top|to divide with a sharp instrument}}
