t+bg:[[пристигам]] t+bg:[[явявам се]] t+bg:[[случвам се]] t+bg:[[ставам]] t-balance ([[WT:EDIT|Assisted]]) <come#7508868>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -119,6 +119,7 @@
 {{trans-bottom}}
 
 {{trans-top|to arrive, to appear}}
+* Bulgarian: {{t|bg|пристигам|sc=Cyrl}},  {{t|bg|явявам се|sc=Cyrl}}
 * Czech: {{t+|cs|přijít}}
 * [[Galician]]: {{t+|gl|vir|xs=Galician}}
 {{trans-mid}}
@@ -144,6 +145,7 @@
 {{trans-bottom}}
 
 {{trans-top|to become}}
+* Bulgarian: {{t|bg|случвам се|sc=Cyrl}},  {{t|bg|ставам|sc=Cyrl}}
 {{trans-mid}}
 {{trans-bottom}}
 
