--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -64,6 +64,7 @@ From {{etyl|fro}} ''[[branche]]''.
 * Turkish: {{t+|tr|dal}}
 * [[Udi]]: {{tø|udi|чӀугъ}}
 * Vietnamese: {{t+|vi|nhánh|xs=Vietnamese}}
+* [[!Xóõ]]: [[gǀkʻqāakú]]
 {{trans-bottom}}
 
 {{trans-top|something that divides like the branch of a tree}}
