t+id:[[arca]] ([[WT:EDIT|Assisted]]) <icon#7525459>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -50,6 +50,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Finnish: {{t-|fi|ikoni}}
 * German: {{t+|de|Ikone|f}}
 * Greek: {{t+|el|εικόνα|f|tr=ikóna|sc=Grek}}, {{t+|el|εικόνισμα|n|tr=ikónizma|sc=Grek}}
+* Indonesian: {{t|id|arca}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
 * Japanese: {{t-|ja|聖像|tr=せいぞう, seizō|sc=Jpan}}
