t+io:[[plumo]] t+io:[[plumiero]] ([[WT:EDIT|Assisted]]) <plum#7525675>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -159,6 +159,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Hindi: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 * Hungarian: {{t+|hu|szilva}}
 * Icelandic: [[plóma]] {{f}}
+* [[Ido]]: {{t|io|plumo}},  {{t|io|plumiero}}
 * Irish: {{t-|ga|pluma|m|xs=Irish}}
 * Italian: {{t+|it|prugna|f}}, {{t+|it|susina|f}}
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyōsumomo|sc=Jpan}}, {{t-|ja|プラム|tr=puramu|sc=Jpan}}
