t+es:[[ramo]] ([[WT:EDIT|Assisted]]) <branch#7531446>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -57,7 +57,7 @@ From {{etyl|fro}} ''[[branche]]''.
 * Serbian: [[грана]] (grana) {{f}}, [[вејка]] (vejka) {{f}} (leafless branch)
 * Slovak: {{t-|sk|vetva|f}}
 * Slovene: {{t+|sl|veja|f}}
-* Spanish: {{tø|sp|ramo|m}}
+* Spanish: {{tø|sp|ramo|m}},  {{t|es|ramo|m}}
 * Swahili: {{t+|sw|tanzu|xs=Swahili}}
 * [[Tagalog]]: {{t-|tl|sanga|xs=Tagalog}}
 * [[Telugu]]: [[కొమ్మ]], [[శాఖ]]
