iwiki +[[:no:curtain]] <curtain#7545093>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -110,6 +110,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 [[hu:curtain]]
 [[ml:curtain]]
 [[nl:curtain]]
+[[no:curtain]]
 [[oc:curtain]]
 [[pl:curtain]]
 [[pt:curtain]]
