iwiki +[[:kn:bridge]] <bridge#7547250>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -311,6 +311,7 @@ From {{etyl|ang|en}} {{term|brycġian|lang=ang}}.
 [[hy:bridge]]
 [[io:bridge]]
 [[it:bridge]]
+[[kn:bridge]]
 [[kk:bridge]]
 [[sw:bridge]]
 [[lo:bridge]]
