--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/'fɔʊt/}}
+* {{IPA|/fɔːt/}}
 * {{audio|en-us-fought.ogg|Audio (US)}}
 * {{rhymes|ɔːt}}
 
